--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -1,13 +1,22 @@
-body {
+@import './styles/theme.css';
+
+html, body, #root {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  height: 100%;
+  background-color: var(--color-background);
+  color: var(--text-primary);
+  font-family: var(--font-family);
+  overflow-x: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*, *::before, *::after {
+  box-sizing: border-box;
 }
+
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+
